# ENSAM-Agent-OS

./: .gitignore  README.md  run.bat
article/: Rapport_Projet_Métier.tex
backend/: .env.example  pyproject.toml  test_classifier.py
backend/app/: config.py
backend/app/agents/: admin.py  base.py  debate.py  general.py  intent_classifier.py  orientation.py  project.py  research.py  tutor.py
backend/app/api/: deps.py  main.py  middleware.py  schemas.py
backend/app/api/routes/: agents.py  chat.py  mcp.py  memory.py  observability.py  rag.py  system.py
backend/app/core/: events.py  kernel.py  llm.py  routing.py  web_search.py
backend/app/mcp/: client.py  registry.py
backend/app/mcp/servers/: documents.py  grades.py  schedule.py
backend/app/memory/: ephemeral.py  gdpr.py  graph.py  manager.py  semantic.py
backend/app/observability/: audit.py  cost.py  metrics.py  telemetry.py
backend/app/rag/: auto_ingest.py  embeddings.py  ingestion.py  pipeline.py  retriever.py
backend/data/schedules/: timetable_4as4.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/app/observability/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/lib/: api.ts  providers.tsx
