[project]
name = "ensam-agent-os"
version = "0.1.0"
description = "Agentic Operating System for ENSAM University"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "groq>=0.9.0",
    "chromadb>=0.6.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.7.0",
    "networkx>=3.0",
    "aiofiles>=24.0.0",
    "sse-starlette>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "psutil>=6.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
